# plot-shapes

./: LICENSE  README.md  README.md.backup  setup.cfg
src/plot_shapes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/plotshapes/: __init__.py  conic_sections.py  quadrilateral.py  transform.py
tests/: check_pkg.py
