[metadata]
name = plot-shapes
version = 00.00.02
author = Sarang Pendharker
author_email = sarang@ece.iitkgp.ac.in
description = A package for constructing and plotting various gepmetric shapes in Python. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarang-IITKgp/plot-shapes.git
project_urls =
    Bug Tracker = https://github.com/sarang-IITKgp/plot-shapes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
